--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,35 @@
 2019-11-19  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r252087. rdar://problem/56900657
+
+    REGRESSION(r252031): layout tests fail to run in non apple ports after r252031 (Follow-up fix)
+    https://bugs.webkit.org/show_bug.cgi?id=203844
+    
+    Rubber-stamped by Aakash Jain.
+    
+    Remove infinite loop for Windows.
+    
+    * Scripts/webkitpy/port/win.py:
+    (WinPort._path_to_default_image_diff):
+    (WinPort._path_to_image_diff): Deleted.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252087 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-05  Jonathan Bedard  <jbedard@apple.com>
+
+            REGRESSION(r252031): layout tests fail to run in non apple ports after r252031 (Follow-up fix)
+            https://bugs.webkit.org/show_bug.cgi?id=203844
+
+            Rubber-stamped by Aakash Jain.
+
+            Remove infinite loop for Windows.
+
+            * Scripts/webkitpy/port/win.py:
+            (WinPort._path_to_default_image_diff):
+            (WinPort._path_to_image_diff): Deleted.
+
+2019-11-19  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r252058. rdar://problem/56889868
 
     webkitpy: Build ImageDiff if it is missing (Follow-fix)
