--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,61 @@
 2019-11-19  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r250966. rdar://problem/56047710
+
+    results.webkit.org: Start reporting results
+    https://bugs.webkit.org/show_bug.cgi?id=202639
+    
+    Reviewed by Dewei Zhu.
+    
+    * BuildSlaveSupport/build.webkit.org-config/loadConfig.py:
+    (loadBuilderConfig): Load API key for results.webkit.org.
+    * BuildSlaveSupport/build.webkit.org-config/make_passwords_json.py:
+    (create_mock_slave_passwords_dict): Add mock for API key.
+    * BuildSlaveSupport/build.webkit.org-config/steps.py:
+    (RunWebKitTests): Start reporting to results.webkit.org.
+    (RunWebKitTests.__init__): Do not print the environment to hide the API key.
+    (RunWebKitTests.start): Add the API key to the environment.
+    (RunAPITests): Start reporting to results.webkit.org.
+    (RunAPITests.__init__): Do not print the environment to hide the API key.
+    (RunAPITests.start): Add the API key to the environment.
+    (RunPythonTests): Start reporting to results.webkit.org.
+    (RunPythonTests.__init__): Do not print the environment to hide the API key.
+    (RunPythonTests.start): Add the API key to the environment.
+    * Scripts/webkitpy/results/upload.py:
+    (Upload):
+    (Upload.upload): Add API_KEY, if it exists, to the request.
+    (Upload.upload_archive): Ditto.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250966 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-10  Jonathan Bedard  <jbedard@apple.com>
+
+            results.webkit.org: Start reporting results
+            https://bugs.webkit.org/show_bug.cgi?id=202639
+
+            Reviewed by Dewei Zhu.
+
+            * BuildSlaveSupport/build.webkit.org-config/loadConfig.py:
+            (loadBuilderConfig): Load API key for results.webkit.org.
+            * BuildSlaveSupport/build.webkit.org-config/make_passwords_json.py:
+            (create_mock_slave_passwords_dict): Add mock for API key.
+            * BuildSlaveSupport/build.webkit.org-config/steps.py:
+            (RunWebKitTests): Start reporting to results.webkit.org.
+            (RunWebKitTests.__init__): Do not print the environment to hide the API key.
+            (RunWebKitTests.start): Add the API key to the environment.
+            (RunAPITests): Start reporting to results.webkit.org.
+            (RunAPITests.__init__): Do not print the environment to hide the API key.
+            (RunAPITests.start): Add the API key to the environment.
+            (RunPythonTests): Start reporting to results.webkit.org.
+            (RunPythonTests.__init__): Do not print the environment to hide the API key.
+            (RunPythonTests.start): Add the API key to the environment.
+            * Scripts/webkitpy/results/upload.py:
+            (Upload):
+            (Upload.upload): Add API_KEY, if it exists, to the request.
+            (Upload.upload_archive): Ditto.
+
+2019-11-19  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r252087. rdar://problem/56900657
 
     REGRESSION(r252031): layout tests fail to run in non apple ports after r252031 (Follow-up fix)
