--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,44 @@
 2019-11-19  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r250997. rdar://problem/56177210
+
+    results.webkit.org: Sort out certificates on Catalina
+    https://bugs.webkit.org/show_bug.cgi?id=202837
+    
+    Unreviewed infrastructure repair.
+    
+    This is a temporary strategy until we sort out our certificates on the newly
+    deployed Catalina bots.
+    
+    * Scripts/webkitpy/results/upload.py:
+    (Upload.upload):
+    (Upload.upload_archive):
+    * Scripts/webkitpy/results/upload_unittest.py:
+    (UploadTest.test_upload):
+    (UploadTest.test_archive_upload):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250997 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-10  Jonathan Bedard  <jbedard@apple.com>
+
+            results.webkit.org: Sort out certificates on Catalina
+            https://bugs.webkit.org/show_bug.cgi?id=202837
+
+            Unreviewed infrastructure repair.
+
+            This is a temporary strategy until we sort out our certificates on the newly
+            deployed Catalina bots.
+
+            * Scripts/webkitpy/results/upload.py:
+            (Upload.upload):
+            (Upload.upload_archive):
+            * Scripts/webkitpy/results/upload_unittest.py:
+            (UploadTest.test_upload):
+            (UploadTest.test_archive_upload):
+
+2019-11-19  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r250966. rdar://problem/56047710
 
     results.webkit.org: Start reporting results
