--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,40 @@
+2019-12-03  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Cherry-pick r252881. rdar://problem/57487005
+
+    Document::needsStyleRecalc() shouldn't return true for fragment scrolling (m_gotoAnchorNeededAfterStylesheetsLoad)
+    https://bugs.webkit.org/show_bug.cgi?id=204593
+    
+    Reviewed by Antti Koivisto.
+    
+    After r252761, we no longer triggers a fragment scrolling as a part of style resolution.
+    Consequently, there is no need for Document::needsStyleRecalc() to return true
+    even when m_gotoAnchorNeededAfterStylesheetsLoad is set and there are no more pending stylesheets.
+    
+    No new tests since there shouldn't really be any observable behavior difference.
+    
+    * dom/Document.cpp:
+    (WebCore::Document::needsStyleRecalc const):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252881 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-26  Ryosuke Niwa  <rniwa@webkit.org>
+
+            Document::needsStyleRecalc() shouldn't return true for fragment scrolling (m_gotoAnchorNeededAfterStylesheetsLoad)
+            https://bugs.webkit.org/show_bug.cgi?id=204593
+
+            Reviewed by Antti Koivisto.
+
+            After r252761, we no longer triggers a fragment scrolling as a part of style resolution.
+            Consequently, there is no need for Document::needsStyleRecalc() to return true
+            even when m_gotoAnchorNeededAfterStylesheetsLoad is set and there are no more pending stylesheets.
+
+            No new tests since there shouldn't really be any observable behavior difference.
+
+            * dom/Document.cpp:
+            (WebCore::Document::needsStyleRecalc const):
+
 2019-12-03  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r252956. rdar://problem/57438874
