--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,42 @@
 2019-12-03  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Cherry-pick r253062. rdar://problem/57576474
+
+    Experimental support for HDR media query
+    https://bugs.webkit.org/show_bug.cgi?id=204422
+    <rdar://problem/56799662>
+    
+    Reviewed by Eric Carlson.
+    
+    Follow-up to r252762 for platforms that don't have MediaToolbox.framework.
+    
+    * platform/ios/PlatformScreenIOS.mm:
+    (WebCore::screenSupportsHighDynamicRange):
+    * platform/mac/PlatformScreenMac.mm:
+    (WebCore::collectScreenProperties):
+    (WebCore::screenSupportsHighDynamicRange):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253062 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-12-03  Jer Noble  <jer.noble@apple.com>
+
+            Experimental support for HDR media query
+            https://bugs.webkit.org/show_bug.cgi?id=204422
+            <rdar://problem/56799662>
+
+            Reviewed by Eric Carlson.
+
+            Follow-up to r252762 for platforms that don't have MediaToolbox.framework.
+
+            * platform/ios/PlatformScreenIOS.mm:
+            (WebCore::screenSupportsHighDynamicRange):
+            * platform/mac/PlatformScreenMac.mm:
+            (WebCore::collectScreenProperties):
+            (WebCore::screenSupportsHighDynamicRange):
+
+2019-12-03  Kocsen Chung  <kocsen_chung@apple.com>
+
         Cherry-pick r252881. rdar://problem/57487005
 
     Document::needsStyleRecalc() shouldn't return true for fragment scrolling (m_gotoAnchorNeededAfterStylesheetsLoad)
