--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,41 @@
+2019-12-03  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r252811. rdar://problem/57609336
+
+    [iOS] Copy assertions before iterating over them in _notifyAssertionsOfImminentSuspension
+    https://bugs.webkit.org/show_bug.cgi?id=204524
+    <rdar://problem/57265830>
+    
+    Reviewed by Alexey Proskuryakov.
+    
+    Copy assertions before iterating over them in _notifyAssertionsOfImminentSuspension and use WeakPtr
+    to make sure the assertions are still alive before calling uiAssertionWillExpireImminently() on
+    them. It is common for process assertions to get released when uiAssertionWillExpireImminently()
+    gets called, which would remove them from the _assertionsNeedingBackgroundTask vector we were
+    iterating on.
+    
+    * UIProcess/ios/ProcessAssertionIOS.mm:
+    (-[WKProcessAssertionBackgroundTaskManager _notifyAssertionsOfImminentSuspension]):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252811 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-22  Chris Dumez  <cdumez@apple.com>
+
+            [iOS] Copy assertions before iterating over them in _notifyAssertionsOfImminentSuspension
+            https://bugs.webkit.org/show_bug.cgi?id=204524
+            <rdar://problem/57265830>
+
+            Reviewed by Alexey Proskuryakov.
+
+            Copy assertions before iterating over them in _notifyAssertionsOfImminentSuspension and use WeakPtr
+            to make sure the assertions are still alive before calling uiAssertionWillExpireImminently() on
+            them. It is common for process assertions to get released when uiAssertionWillExpireImminently()
+            gets called, which would remove them from the _assertionsNeedingBackgroundTask vector we were
+            iterating on.
+
+            * UIProcess/ios/ProcessAssertionIOS.mm:
+            (-[WKProcessAssertionBackgroundTaskManager _notifyAssertionsOfImminentSuspension]):
+
 2019-11-19  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r252619. rdar://problem/57330791
