Revert r252755. rdar://problem/57607890
git-svn-id: https://svn.webkit.org/repository/webkit/tags/Safari-609.1.11@253111 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-04  Alan Coon  <alancoon@apple.com>
+
+        Revert r252755. rdar://problem/57607890
+
 2019-11-22  Alex Christensen  <achristensen@webkit.org>
 
         Unreviewed, rolling out r252796.
