--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-04  Alan Coon  <alancoon@apple.com>
+
+        Revert r252755. rdar://problem/57607890
+
 2019-12-03  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r253062. rdar://problem/57576474
