Fix the TestWebKitAPI 608-branch build
* TestWebKitAPI/Configurations/Base.xcconfig:
We didn't merge this line from trunk, but merged other things that depend on it being there.


Canonical link: https://commits.webkit.org/213666.562@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@253114 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,10 @@
+2019-12-04  Tim Horton  <timothy_horton@apple.com>
+
+        Fix the TestWebKitAPI 608-branch build
+
+        * TestWebKitAPI/Configurations/Base.xcconfig:
+        We didn't merge this line from trunk, but merged other things that depend on it being there.
+
 2019-11-19  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r252031. rdar://problem/56889868
