--- a/JSTests/ChangeLog
+++ b/JSTests/ChangeLog
@@ -1,3 +1,28 @@
+2019-12-04  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r253124. rdar://problem/57596734
+
+    Unreviewed, rolling out r252416, vimeo does not work
+    https://bugs.webkit.org/show_bug.cgi?id=204141
+    
+    JSTests:
+    
+    * stress/generator-cell-with-type.js: Removed.
+    
+    Source/JavaScriptCore:
+    
+    * dfg/DFGAbstractInterpreterInlines.h:
+    (JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253124 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-12-04  Yusuke Suzuki  <ysuzuki@apple.com>
+
+            Unreviewed, rolling out r252416, vimeo does not work
+            https://bugs.webkit.org/show_bug.cgi?id=204141
+
+            * stress/generator-cell-with-type.js: Removed.
+
 2019-11-22  Tadeu Zagallo  <tzagallo@apple.com>
 
         [WebAssembly] Improve Wasm::LLIntGenerator
