--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,40 @@
+2019-12-16  Dan Robson  <dan_robson@apple.com>
+
+        Cherry-pick r250461. rdar://problem/57979214
+
+    Adopt new UIWebGeolocationPolicyDecider SPI to pass a view instead of a window
+    https://bugs.webkit.org/show_bug.cgi?id=202329
+    <rdar://problem/25963823>
+    
+    Reviewed by Wenson Hsieh.
+    
+    * Platform/spi/ios/UIKitSPI.h:
+    * UIProcess/ios/WKGeolocationProviderIOS.mm:
+    (-[WKGeolocationProviderIOS geolocationAuthorizationGranted]):
+    * UIProcess/ios/WKGeolocationProviderIOSObjCSecurityOrigin.mm:
+    (WebKit::decidePolicyForGeolocationRequestFromOrigin):
+    Switch to newer SPI that takes a UIView instead of a UIWindow, so that
+    UIWebGeolocationPolicyDecider can find the correct presenting view controller.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250461 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-09-27  Tim Horton  <timothy_horton@apple.com>
+
+            Adopt new UIWebGeolocationPolicyDecider SPI to pass a view instead of a window
+            https://bugs.webkit.org/show_bug.cgi?id=202329
+            <rdar://problem/25963823>
+
+            Reviewed by Wenson Hsieh.
+
+            * Platform/spi/ios/UIKitSPI.h:
+            * UIProcess/ios/WKGeolocationProviderIOS.mm:
+            (-[WKGeolocationProviderIOS geolocationAuthorizationGranted]):
+            * UIProcess/ios/WKGeolocationProviderIOSObjCSecurityOrigin.mm:
+            (WebKit::decidePolicyForGeolocationRequestFromOrigin):
+            Switch to newer SPI that takes a UIView instead of a UIWindow, so that
+            UIWebGeolocationPolicyDecider can find the correct presenting view controller.
+
 2019-12-03  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r252811. rdar://problem/57609336
