Revert r253499. rdar://problem/57990824
Canonical link: https://commits.webkit.org/218446.2@safari-609.1.13-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.13-branch@253604 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-16  Alan Coon  <alancoon@apple.com>
+
+        Revert r253499. rdar://problem/57990824
+
 2019-12-14  Per Arne Vollan  <pvollan@apple.com>
 
         Map CSS value ID to system color in the UI process
