--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,33 @@
 2019-12-18  Dan Robson  <dan_robson@apple.com>
 
+        Cherry-pick r253662. rdar://problem/58049156
+
+    Limit URL to reasonable size
+    https://bugs.webkit.org/show_bug.cgi?id=203825
+    <rdar://problem/56878680>
+    
+    Reviewed by Ryosuke Niwa.
+    
+    * page/SecurityOrigin.cpp:
+    (WebCore::SecurityOrigin::canDisplay const): Place an upper bound on the amount of
+    memory a URL may consume.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253662 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-12-17  Brent Fulgham  <bfulgham@apple.com>
+
+            Limit URL to reasonable size
+            https://bugs.webkit.org/show_bug.cgi?id=203825
+            <rdar://problem/56878680>
+
+            Reviewed by Ryosuke Niwa.
+
+            * page/SecurityOrigin.cpp:
+            (WebCore::SecurityOrigin::canDisplay const): Place an upper bound on the amount of
+            memory a URL may consume.
+
+2019-12-18  Dan Robson  <dan_robson@apple.com>
+
         Cherry-pick r253653. rdar://problem/58049166
 
     Document::setFocusedElement should not set m_focusedElement to an element in another document
