--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,43 @@
 2019-12-18  Dan Robson  <dan_robson@apple.com>
 
+        Cherry-pick r253654. rdar://problem/58049166
+
+    executeIfJavaScriptURL should check requester's security origin
+    https://bugs.webkit.org/show_bug.cgi?id=205324
+    
+    Reviewed by Brent Fulgham.
+    
+    Don't execute the JavaScript in ScriptController::executeIfJavaScriptURL if the security origin
+    of the current document is no longer accessible from the request originator's security origin.
+    
+    * bindings/js/ScriptController.cpp:
+    (WebCore::ScriptController::executeIfJavaScriptURL): Added a check.
+    * bindings/js/ScriptController.h:
+    * loader/FrameLoader.cpp:
+    (WebCore::FrameLoader::urlSelected): Pass around the security origin of the requester.
+    (WebCore::FrameLoader::submitForm):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253654 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-12-17  Ryosuke Niwa  <rniwa@webkit.org>
+
+            executeIfJavaScriptURL should check requester's security origin
+            https://bugs.webkit.org/show_bug.cgi?id=205324
+
+            Reviewed by Brent Fulgham.
+
+            Don't execute the JavaScript in ScriptController::executeIfJavaScriptURL if the security origin
+            of the current document is no longer accessible from the request originator's security origin.
+
+            * bindings/js/ScriptController.cpp:
+            (WebCore::ScriptController::executeIfJavaScriptURL): Added a check.
+            * bindings/js/ScriptController.h:
+            * loader/FrameLoader.cpp:
+            (WebCore::FrameLoader::urlSelected): Pass around the security origin of the requester.
+            (WebCore::FrameLoader::submitForm):
+
+2019-12-18  Dan Robson  <dan_robson@apple.com>
+
         Cherry-pick r253662. rdar://problem/58049156
 
     Limit URL to reasonable size
