--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-18  Alan Coon  <alancoon@apple.com>
+
+        Revert r253493. rdar://problem/58028534
+
 2019-12-14  Per Arne Vollan  <pvollan@apple.com>
 
         [iOS] Deny mach lookup access to "*.viewservice" in the WebContent process
