--- a/LayoutTests/imported/w3c/ChangeLog
+++ b/LayoutTests/imported/w3c/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-18  Alan Coon  <alancoon@apple.com>
+
+        Revert r253493. rdar://problem/58028534
+
 2019-12-13  Chris Dumez  <cdumez@apple.com>
 
         Implement PostMessageOptions for postMessage
