Revert r253530. rdar://problem/58070303
Canonical link: https://commits.webkit.org/218446.11@safari-609.1.13-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.13-branch@253773 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-19  Alan Coon  <alancoon@apple.com>
+
+        Revert r253530. rdar://problem/58070303
+
 2019-12-18  Alan Coon  <alancoon@apple.com>
 
         Revert r253493. rdar://problem/58028534
