--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,61 @@
+2020-01-07  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r254142. rdar://problem/58310178
+
+    Bytecode checkpoint fixes for arm64(e)
+    https://bugs.webkit.org/show_bug.cgi?id=205871
+    
+    Reviewed by Michael Saboff.
+    
+    The original bytecode checkpoint patch had a couple of bugs on
+    arm64(e). For arm64 generally, when osr exiting to an inline
+    varargs frame we didn't set the return value of callee before
+    moving the call frame register into a0 for the slow path
+    call. This meant we clobber the return value on arm64 as a0 == r0.
+    
+    On arm64e the osr exit compiler set the tag for the return pc for
+    an inline frame to JSEntryTag but the code expected
+    NoTag. Additionally, in the stack unwinder, we were using the
+    JSEntryTag but we should have been stripping the tag from the
+    stack value.
+    
+    * dfg/DFGOSRExitCompilerCommon.cpp:
+    (JSC::DFG::callerReturnPC):
+    (JSC::DFG::reifyInlinedCallFrames):
+    * dfg/DFGOSRExitCompilerCommon.h:
+    * interpreter/Interpreter.cpp:
+    (JSC::UnwindFunctor::operator() const):
+    * llint/LowLevelInterpreter.asm:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254142 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-07  Keith Miller  <keith_miller@apple.com>
+
+            Bytecode checkpoint fixes for arm64(e)
+            https://bugs.webkit.org/show_bug.cgi?id=205871
+
+            Reviewed by Michael Saboff.
+
+            The original bytecode checkpoint patch had a couple of bugs on
+            arm64(e). For arm64 generally, when osr exiting to an inline
+            varargs frame we didn't set the return value of callee before
+            moving the call frame register into a0 for the slow path
+            call. This meant we clobber the return value on arm64 as a0 == r0.
+
+            On arm64e the osr exit compiler set the tag for the return pc for
+            an inline frame to JSEntryTag but the code expected
+            NoTag. Additionally, in the stack unwinder, we were using the
+            JSEntryTag but we should have been stripping the tag from the
+            stack value.
+
+            * dfg/DFGOSRExitCompilerCommon.cpp:
+            (JSC::DFG::callerReturnPC):
+            (JSC::DFG::reifyInlinedCallFrames):
+            * dfg/DFGOSRExitCompilerCommon.h:
+            * interpreter/Interpreter.cpp:
+            (JSC::UnwindFunctor::operator() const):
+            * llint/LowLevelInterpreter.asm:
+
 2020-01-02  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] MarkedBlock::Handle and BlockDirectory should be shrunk
