--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,43 @@
+2020-01-08  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r252847. rdar://problem/58414545
+
+    REGRESSION (Safari 13): WebSocket payload is truncated when x-webkit-deflate-frame is used
+    https://bugs.webkit.org/show_bug.cgi?id=202401
+    <rdar://problem/55922632>
+    
+    Reviewed by Alex Christensen.
+    
+    Source/WebCore:
+    
+    Test: http/tests/websocket/tests/hybi/deflate-extension.html
+    
+    * Modules/websockets/WebSocketDeflater.cpp:
+    (WebCore::WebSocketDeflater::finish):
+    Make sure to continue calling deflate until all output data is flushed.
+    
+    LayoutTests:
+    
+    * http/tests/websocket/tests/hybi/deflate-extension-expected.txt: Added.
+    * http/tests/websocket/tests/hybi/deflate-extension.html: Added.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252847 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-25  Youenn Fablet  <youenn@apple.com>
+
+            REGRESSION (Safari 13): WebSocket payload is truncated when x-webkit-deflate-frame is used
+            https://bugs.webkit.org/show_bug.cgi?id=202401
+            <rdar://problem/55922632>
+
+            Reviewed by Alex Christensen.
+
+            Test: http/tests/websocket/tests/hybi/deflate-extension.html
+
+            * Modules/websockets/WebSocketDeflater.cpp:
+            (WebCore::WebSocketDeflater::finish):
+            Make sure to continue calling deflate until all output data is flushed.
+
 2019-12-18  youenn fablet  <youenn@apple.com>
 
         Protect ServiceWorker::postMessage from a null execState
